# 2026-PLDX_RMUL_Hero

./: .gitignore  Parameter_means.md  README.md  Vision参数调整指南.md  task_plan.md  代码架构问题修复总结.md  功率控制参数调试指南.md  功率控制调参指南.md
Chassis/: CMakeLists.txt  LQR力控策略实现总结.md  Makefile  flash.ps1  力控策略移植完成报告.md
Chassis/application/: application.md  robot.c  robot_def.h  robot_task.h
Chassis/application/chassis/: chassis.c  chassis.md
Chassis/application/cmd/: robot_cmd.c  robot_cmd.md
Chassis/application/gimbal/: gimbal.c
Chassis/application/shoot/: shoot.c
Chassis/application/sysid/: sysid_task.c
Chassis/bsp/flash/: bsp_flash.c
Chassis/bsp/usart/: bsp_usart.c  bsp_usart.h  bsp_usart.md  bsp_usart_async.c  bsp_usart_async.h
Chassis/build_cmake_check/: build.ninja
Chassis/build_tmp_ninja/: build.ninja
Chassis/cmake/: gcc-arm-none-eabi.cmake
Chassis/docs/: usart_libxr_migration_20260314.md
Chassis/modules/BMI088/: bmi088.h
Chassis/modules/algorithm/: algorithm.md  chassis_force_control.c  chassis_force_control.h  (+4 more)
Gimbal/: AGENTS.md  CMakeLists.txt  Makefile  README.md  compile.ps1  compile.sh  flash.sh  fnm.cmd  fnm_stub.cs  rm2026_rules_v1_2_0_text.md
Gimbal/.Doc/: Bug_Report.md  必须做&禁止做.md
Gimbal/Src/: main.c  stm32f4xx_it.c  system_stm32f4xx.c  usart.c
Gimbal/application/: APP层应用编写指引.md  application.md  robot.c  robot.h  robot_def.h  robot_task.h
Gimbal/application/chassis/: chassis.c
Gimbal/application/cmd/: robot_cmd.c  robot_cmd.md
Gimbal/application/gimbal/: Yaw准力矩直控使用说明.md  gimbal.c  gimbal.md  达妙电机使用指南.md
Gimbal/application/shoot/: shoot.c  shoot.md
Gimbal/application/sysid/: sysid_task.c  sysid_task.h
Gimbal/application/vision/: vision.c
Gimbal/bsp/: bsp_init.h
Gimbal/bsp/dwt/: bsp_dwt.h
Gimbal/bsp/usart/: bsp_usart.c  bsp_usart.h  bsp_usart.md  bsp_usart_async.c  bsp_usart_async.h
Gimbal/build_tmp_ninja/: build.ninja
Gimbal/docs/: uart_libxr_alignment_baseline_20260315.md  usart_referee_vtm_migration_20260314.md
Gimbal/modules/BMI088/: bmi088.c
Gimbal/modules/algorithm/: LQR完整实现总结.md  LQR控制器使用说明.md  QuaternionEKF.h  SMC_Controller.c  SMC_Controller.h  algorithm.md  arm_math_compat.h  controller.c  controller.h  fc_controller.c  fc_controller.h  heat_gate_model.c  heat_gate_model.h  kalman_filter.h  user_lib.h  vision_control.c  vision_control.h
Gimbal/modules/algorithm/controllers/domain/: shoot_effort_controller.h  shoot_effort_controller.md  vision_control.c  vision_control.h
Gimbal/modules/algorithm/controllers/lqr/: LQR_Example.c  lqr_controller.c  lqr_controller.h
Gimbal/modules/algorithm/controllers/models/: heat_gate_model.c
Gimbal/modules/algorithm/controllers/pid/: pid_controller.c  pid_controller.h
Gimbal/modules/algorithm/controllers/reference/: gimbal_ref_manager.c  gimbal_ref_manager.h  gimbal_ref_manager.md
Gimbal/modules/algorithm/controllers/smc/: smc_controller.c
Gimbal/modules/algorithm/estimation/attitude/: quaternion_ekf.c  quaternion_ekf.h
Gimbal/modules/algorithm/estimation/kalman/: kalman_filter.c
Gimbal/modules/algorithm/utils/checksum/: crc16.c
Gimbal/modules/algorithm/utils/math/: user_lib.c  user_lib.h
Gimbal/modules/bluetooth/: HC05.c
Gimbal/modules/can_comm/: can_comm.c
Gimbal/modules/daemon/: daemon.c
Gimbal/modules/imu/: BMI088driver.c  BMI088driver.h  ins_task.c  ins_task.h
Gimbal/modules/master_machine/: master_process.c  master_process.h
Gimbal/modules/message_center/: message_center.c
Gimbal/modules/motor/: motor_def.h  motor_task.h  tau_ref_adapter.md
Gimbal/modules/motor/DJImotor/: dji_motor.c  dji_motor.h  dji_motor.md  dji_motor_adapter.c  dji_motor_adapter.h
Gimbal/modules/motor/DMmotor/: dmmotor.c  dmmotor.h  dmmotor.md  dmmotor_adapter.c
Gimbal/modules/motor/HTmotor/: HT04.c
Gimbal/modules/motor/servo_motor/: servo_motor.c
Gimbal/modules/referee/: referee_UI.c  referee_protocol.h  referee_task.c  referee_task.h  rm_referee.c  rm_referee.h
Gimbal/modules/remote/: remote_control.c  remote_control.h
Gimbal/modules/vision_comm/: vision_comm.c  vision_comm.h  vision_comm.md
Gimbal/modules/vision_control/: vision_control.c  vision_control.h
Gimbal/modules/vtm_input/: vtm_input.c  vtm_input.h
docs/: chassis_gimbal_control_chain_architecture.md
scripts/: push_chassis_gimbal_to_pldx.ps1
tests/: algorithm_api_contract_regression.ps1  algorithm_layer_layout_regression.ps1  application_runtime_model_regression.ps1  autoaim_ff_and_vision_params_regression.ps1  autoaim_reference_mainline_regression.ps1  chassis_death_recovery_safety_regression.ps1  chassis_dji_native_tau_semantic_regression.ps1  chassis_legacy_power_bridge_boundary_regression.ps1  chassis_safety_status_protocol_boundary_regression.ps1  chassis_tau_mainline_regression.ps1  cmake_explicit_include_regression.ps1  debug_build_hard_gate.ps1  debug_build_hard_gate_isolation_regression.ps1  debug_build_hard_gate_retention_regression.ps1  dji_motor_doc_mainline_regression.ps1  dual_board_build_entry_regression.ps1  dual_board_chassis_boundary_regression.ps1  dual_board_docs_regression.ps1  dual_board_gimbal_boundary_regression.ps1  energy_loop_equivalence_regression.ps1  energy_loop_golden_regression.ps1  feedforward_naming_consistency_regression.ps1  gimbal_application_boundary_regression.ps1  gimbal_chassis_yaw_ff_sign_regression.ps1  gimbal_legacy_chassis_compat_regression.ps1  gimbal_ref_manager_regression.ps1  gimbal_seteffort_mainline_regression.ps1  gimbal_sysid_interface_boundary_regression.ps1  gimbal_yaw_tau_semantic_regression.ps1  hard_gate_artifact_policy_regression.ps1  include_graph_regression.ps1  legacy_interface_whitelist_regression.ps1  legacy_power_bridge_whitelist_regression.ps1  limited_output_equivalence_regression.ps1  limited_output_golden_regression.ps1  manual_input_feedforward_regression.ps1  motor_interface_state_boundary_regression.ps1  pitch_dm_torque_mainline_regression.ps1  power_controller_golden_regression_bundle.ps1  power_controller_golden_regression_common.ps1  (+11 more)
tests/harnesses/: power_controller_sample_harness.c  power_controller_sample_harness.h
(+93 files in other folders)
